sys/prebuilt-bindings/geos_3.9.rs

extern "C" {
    #[doc = "  Misc functions"]
    #[doc = ""]
    pub fn GEOSArea_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        area: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSLength_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        length: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistanceIndexed_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHausdorffDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHausdorffDistanceDensify_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: f64,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistanceDensify_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: f64,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetLength_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        length: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSNearestPoints_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " Algorithms"]
    #[doc = ""]
    pub fn GEOSOrientationIndex_r(
        handle: GEOSContextHandle_t,
        Ax: f64,
        Ay: f64,
        Bx: f64,
        By: f64,
        Px: f64,
        Py: f64,
    ) -> libc::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKTReader_t {
    _unused: [u8; 0],
}
pub type GEOSWKTReader = GEOSWKTReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKTWriter_t {
    _unused: [u8; 0],
}
pub type GEOSWKTWriter = GEOSWKTWriter_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKBReader_t {
    _unused: [u8; 0],
}
pub type GEOSWKBReader = GEOSWKBReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKBWriter_t {
    _unused: [u8; 0],
}
pub type GEOSWKBWriter = GEOSWKBWriter_t;
extern "C" {
    pub fn GEOSWKTReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKTReader;
}
extern "C" {
    pub fn GEOSWKTReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSWKTReader);
}
extern "C" {
    pub fn GEOSWKTReader_read_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKTReader,
        wkt: *const libc::c_char,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKTWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKTWriter;
}
extern "C" {
    pub fn GEOSWKTWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSWKTWriter);
}
extern "C" {
    pub fn GEOSWKTWriter_write_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        g: *const GEOSGeometry,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSWKTWriter_setTrim_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        trim: libc::c_char,
    );
}
extern "C" {
    pub fn GEOSWKTWriter_setRoundingPrecision_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        precision: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKTWriter_setOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        dim: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKTWriter_getOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKTWriter_setOld3D_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        useOld3D: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKBReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKBReader;
}
extern "C" {
    pub fn GEOSWKBReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSWKBReader);
}
extern "C" {
    pub fn GEOSWKBReader_read_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKBReader,
        wkb: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKBReader_readHEX_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKBReader,
        hex: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKBWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKBWriter;
}
extern "C" {
    pub fn GEOSWKBWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSWKBWriter);
}
extern "C" {
    pub fn GEOSWKBWriter_write_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_writeHEX_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_getOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        newDimension: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKBWriter_getByteOrder_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setByteOrder_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        byteOrder: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKBWriter_getIncludeSRID_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSWKBWriter_setIncludeSRID_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        writeSRID: libc::c_char,
    );
}
extern "C" {
    pub fn GEOSFree_r(handle: GEOSContextHandle_t, buffer: *mut libc::c_void);
}
extern "C" {
    pub fn GEOS_getWKBOutputDims() -> libc::c_int;
}
extern "C" {
    pub fn GEOS_setWKBOutputDims(newDims: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn GEOS_getWKBByteOrder() -> libc::c_int;
}
extern "C" {
    pub fn GEOS_setWKBByteOrder(byteOrder: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomFromWKB_buf(wkb: *const libc::c_uchar, size: usize) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomToWKB_buf(g: *const GEOSGeometry, size: *mut usize) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSGeomFromHEX_buf(hex: *const libc::c_uchar, size: usize) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomToHEX_buf(g: *const GEOSGeometry, size: *mut usize) -> *mut libc::c_uchar;
}
extern "C" {
    #[doc = " Coordinate Sequence functions"]
    #[doc = ""]
    pub fn GEOSCoordSeq_create(size: libc::c_uint, dims: libc::c_uint) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_clone(s: *const GEOSCoordSequence) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_destroy(s: *mut GEOSCoordSequence);
}
extern "C" {
    pub fn GEOSCoordSeq_setX(s: *mut GEOSCoordSequence, idx: libc::c_uint, val: f64)
        -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setY(s: *mut GEOSCoordSequence, idx: libc::c_uint, val: f64)
        -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setZ(s: *mut GEOSCoordSequence, idx: libc::c_uint, val: f64)
        -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setXY(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: f64,
        y: f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setXYZ(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: f64,
        y: f64,
        z: f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setOrdinate(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getX(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getY(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getZ(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getXY(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut f64,
        y: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getXYZ(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut f64,
        y: *mut f64,
        z: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getOrdinate(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getSize(
        s: *const GEOSCoordSequence,
        size: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getDimensions(
        s: *const GEOSCoordSequence,
        dims: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_isCCW(
        s: *const GEOSCoordSequence,
        is_ccw: *mut libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = "  Linear referencing functions -- there are more, but these are"]
    #[doc = "  probably sufficient for most purposes"]
    #[doc = ""]
    pub fn GEOSProject(g: *const GEOSGeometry, p: *const GEOSGeometry) -> f64;
}
extern "C" {
    pub fn GEOSInterpolate(g: *const GEOSGeometry, d: f64) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSProjectNormalized(g: *const GEOSGeometry, p: *const GEOSGeometry) -> f64;
}
extern "C" {
    pub fn GEOSInterpolateNormalized(g: *const GEOSGeometry, d: f64) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBuffer(
        g: *const GEOSGeometry,
        width: f64,
        quadsegs: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBufferParams_create() -> *mut GEOSBufferParams;
}
extern "C" {
    pub fn GEOSBufferParams_destroy(parms: *mut GEOSBufferParams);
}
extern "C" {
    pub fn GEOSBufferParams_setEndCapStyle(
        p: *mut GEOSBufferParams,
        style: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setJoinStyle(
        p: *mut GEOSBufferParams,
        joinStyle: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setMitreLimit(p: *mut GEOSBufferParams, mitreLimit: f64)
        -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setQuadrantSegments(
        p: *mut GEOSBufferParams,
        quadSegs: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setSingleSided(
        p: *mut GEOSBufferParams,
        singleSided: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferWithParams(
        g: *const GEOSGeometry,
        p: *const GEOSBufferParams,
        width: f64,
    ) -> *mut GEOSGeometry;
}
